# gtest-cmake-integration

./: CMakeLists.txt  Client.cpp  Client.h  ClientTest.cpp  FactorialTest.cpp  Interface.h  MockInterface.h  README.md  main.cpp
